--- a/boxs.index.html
+++ b/boxs.index.html
@@ -3,9 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <!-- CSSファイルの読み込み -->
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="boxs.style.css" />
     <title>CARAVAN</title>
   </head>
 
-  <body></body>
+  <body>
+    <div class="boxes">
+      <div class="box1"></div>
+      <div class="box2"></div>
+    </div>
+  </body>
 </html>
