[Update]2-5練習問題終了

--- a/index.html
+++ b/index.html
@@ -32,6 +32,8 @@
       <div class="sidebar"></div>
     </div>
 
-    <footer></footer>
+    <footer>
+      <p class="footer-text">© All rights reserved Infratop.Inc </p>
+    </footer>
   </body>
 </html>
