[Update]答え確認前

--- a/2-5 演習問題.html
+++ b/2-5 演習問題.html
@@ -12,8 +12,8 @@
       <a href="2-5 演習問題.html">infratop</a>
     </header>
     <h1>
-      <nav class="nav">
-        <ol>
+      <nav>
+        <ul class="list">
           <li class="list-item">
             <a href="2-5 演習問題.html">webcamp</a>
           </li>
@@ -27,32 +27,23 @@
             <a href="2-5 演習問題.html">webcamp carrer</a>
             <a ></a>
           </li>
-        </ol>
+        </ul>
       </nav>
     </h1>
-    <div class="main">
-      <div class="content">
+      <div class="main">
         <div class="content1"></div>
         <div class="content2"></div>
         <div class="content3"></div>
         <div class="content4"></div>
-
-      </div>
-      <div class="content">
         <div class="content5"></div>
         <div class="content6"></div>
         <div class="content7"></div>
         <div class="content8"></div>
-
-      </div>
-      <div class="content">
         <div class="content9"></div>
         <div class="content10"></div>
         <div class="content11"></div>
         <div class="content12"></div>
-
       </div>
-    </div>
     <footer>
       <p class="footer-text">© All rights reserved Infratop.Inc</p>
     </footer>
