--- a/2-6 演習用.html
+++ b/2-6 演習用.html
@@ -3,10 +3,15 @@
   <head>
     <meta charset="UTF-8" />
     <!-- CSSファイルの読み込み -->
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="2-6 演習用.css" />
     <title>CARAVAN</title>
   </head>
   <body>
-
+    <div class="box">
+      <div class="box1"></div>
+      <div class="box2"></div>
+      <div class="box3"></div>
+      <div class="box4"></div>
+    </div>
   </body>
 </html>
