--- a/2-7演習問題.html
+++ b/2-7演習問題.html
@@ -8,6 +8,21 @@
   </head>
 
   <body>
-    
-
+    <header> 
+      <div class="header-text">サービス紹介</div>
+    </header>
+   
+    <body>
+      <main>
+        <section>
+          <img class="text-img" src="img/wc-logo.png">
+          
+          <h1>
+            マンツーマンによるサポート学習で、<br />
+            確実にWEBスキルを習得できるプログラミングスクールです
+            <p>webサイト</p>
+          </h1>
+        </section>
+      </main>
+    </body>
   </body>
