--- a/2-7演習問題.html
+++ b/2-7演習問題.html
@@ -13,16 +13,50 @@
     </header>
    
     <body>
+      
       <main>
-        <section>
+        <section class="main-content">
           <img class="text-img" src="img/wc-logo.png">
-          
           <h1>
-            マンツーマンによるサポート学習で、<br />
-            確実にWEBスキルを習得できるプログラミングスクールです
-            <p>webサイト</p>
+            マンツーマンによるサポート学習で、<br>
+            確実にWEBスキルを習得できるプログラミングスクールです。<br>
+            <a href="2-7演習問題.html">webサイト</a>
+            <hr class="border">
           </h1>
         </section>
+
+        <section class="main-content">
+          <img class="text-img" src="img/wcp-logo.png">
+          <h1>
+            未経験から転職を保証する<br>
+            日本で唯一のプログラミングスクールです。<br>
+            <a href="2-7演習問題.html">webサイト</a>
+            <hr class="border">
+          </h1>
+        </section>
+
+        <section class="main-content">
+          <img class="text-img" src="img/wcw-logo.png">
+          <h1>
+            家庭も仕事も頑張りたい主婦・ママ向けの、<br>
+            1カ月でWebサイトを制作するWebデザインスクールです。<br>
+            <a href="2-7演習問題.html">webサイト</a>
+            <hr class="border">
+          </h1>
+        </section>
+
+        <section class="main-content">
+          <img class="text-img" src="img/wcc-logo.png">
+          <h1>
+            300名のエンジニアをサポートしてきたエージェントが<br>
+            あなたの転職をサポート。<br>
+            <a href="2-7演習問題.html">webサイト</a>
+            <hr class="border">
+          </h1>
+        </section>
+
+
       </main>
+
     </body>
   </body>
