--- a/2-9演習問題.html
+++ b/2-9演習問題.html
@@ -11,35 +11,31 @@
     <header></header>
     <main>
       <div class="main-content">
-        <h1 class="main-mini"></h1>
-        <h2 class="main-item1"></h2>
-        <h3 class="main-title"></h3>
+        <div class="main-item1"></div>
+        <span class="main-mini">step1</span>
+        <h3 class="main-title">タイトルが入ります</h3>
         <p>
-
+        文書が入ります。文書が入ります。文書が入ります。文書が入ります。文書が入ります。文書が入ります。
         </p>
         
       </div>
-    </main>
-    <main>
       <div class="main-content">
-        <h1 class="main-mini"></h1>
-        <h2 class="main-item2"></h2>
-        <h3 class="main-title"></h3>
+        <div class="main-item2"></div>
+        <span class="main-mini">step2</span>
+        <h3 class="main-title">タイトルが入ります</h3>
         <p>
-
+        文書が入ります。文書が入ります。文書が入ります。文書が入ります。文書が入ります。文書が入ります。
         </p>
-
       </div>
-    </main>
-    <main>
       <div class="main-content">
-        <h1 class="main-mini"></h1>
-        <h2 class="main-item3"></h2>
-        <h3 class="main-title"></h3>
+        <div class="main-item3"></div>
+        <span class="main-mini">step3</span>
+        <h3 class="main-title">タイトルが入ります</h3>
         <p>
-
+         文書が入ります。文書が入ります。文書が入ります。文書が入ります。文書が入ります。文書が入ります。
         </p>
       </div>
     </main>
     <footer></footer>
   </body>
+</html>
